Name:            falling3d
Version:         0.0.0.0
Description:     3d physics engine
License:         BSD3
License-file:    LICENSE
Author:          Sébastien Croze
Maintainer:      developer@crozet.re
Build-Type:      Simple
Cabal-Version:   >=1.2

Library
  Exposed-modules: Physics.Falling3d.World3d
                   Physics.Falling3d.InertiaTensor3d
                   Physics.Falling3d.RigidBody3d
                   Physics.Falling3d.Shape3d
                   Physics.Falling3d.Box
                   Physics.Falling3d.Shape3dNarrowPhase
                   Physics.Falling3d.Collision3d
                   Physics.Falling3d.Transform3d
                   Physics.Falling3d.UnitSphere3d
                   Physics.Falling3d.OrthonormalBasis3d
  Build-Depends:   base, vect, falling, normaldistribution, random, vector
  ghc-options:     -Wall -O2
